--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
                     <li><a href="#home">Home</a></li>
                     <li><a href="#ExploreFood">Explore Food</a></li>
                     <li><a href="#specials-items">Special Items</a></li>
-                    <li><a href="https://www.linkedin.com/in/ayerajkumar/">Contact Me</a></li>
+                    <li><a href="https://www.linkedin.com/in/soumya-raj-/">Contact Me</a></li>
                     <li><a href="https://ayeraj.github.io/hungry/">Old Version</a></li>
                 </ul>
             </div>
@@ -158,7 +158,7 @@
     </section>
     <footer>
         <div class="center">
-            Developer © Raj
+            Developer © Soumya Raj
         </div>
     </footer>
 </body>
